# bktrader

./: .dockerignore  .gitignore  AGENTS.local.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  combine_1m_4h.py  combine_tick_4h.py  dataPreprocess.py  go.mod  go.sum  pr_169_full.patch  pr_comment.md  tmp_test_results.txt  迁移计划.md
research/entry_redesign/: NEXT_EXPERIMENT.md  README.md  __init__.py  breakout_structure_decision_20260518.md  breakout_structure_risk_appetite_20260519.md  breakout_structure_robustness_matrix_20260518.md  pretouch_static_downsize_optimization_20260523.md  pyproject.toml
research/entry_redesign/attribution/: __init__.py  attribution_csv_writer.py
research/entry_redesign/confirmation/: __init__.py  trigger_confirmation_evaluator.py
research/entry_redesign/cost/: __init__.py  cost_model_applier.py
research/entry_redesign/detector/: __init__.py  entry_trigger_detector.py
research/entry_redesign/gate/: __init__.py  candidate_001_snapshot_loader.py  gate_composition_layer.py
research/entry_redesign/invariants/: __init__.py  assertions.py  invariant_checker.py  violations_markdown_writer.py
research/entry_redesign/ledger/: __init__.py  ledger_csv_writer.py
research/entry_redesign/metrics/: __init__.py  metrics_aggregator.py
research/entry_redesign/oos/: __init__.py  oos_archive_availability.py
research/entry_redesign/posttouch/: __init__.py  posttouch_quality_gate.py
research/entry_redesign/pretouch/: __init__.py  pretouch_state_gate.py
research/entry_redesign/price/: __init__.py  entry_price_resolver.py
(+3256 files in other folders)
